@@ -1,5 +1,7 @@
 2004-12-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/open-type-font.cc (load_scheme_table): new function
+
 	* lily/dots.cc (print): replace - 
 
 	* lily/open-type-font.cc (attachment_point): new function.
